# LogiCore

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.airgap.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: content-reviewer.md  e2e-tester.md  linkedin-architect.md  medium-architect.md  phase-analyzer.md  phase-reviewer.md  tdd-phase-builder.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/agents/auditor/: comparator.py
apps/api/src/agents/brain/: reader.py
apps/api/src/api/v1/: analytics.py  ingest.py  search.py
apps/api/src/config/: settings.py
apps/api/src/core/api/v1/: analytics.py  health.py  ingest.py  search.py
apps/api/src/core/config/: settings.py
apps/api/src/core/domain/: document.py
apps/api/src/core/infrastructure/kafka/: __init__.py  consumer.py  producer.py
apps/api/src/core/infrastructure/llm/: azure_openai.py  cache.py  circuit_breaker.py  ollama.py  provider.py  provider_chain.py  resilient_llm.py  retry.py  router.py
apps/api/src/core/infrastructure/postgres/: checkpointer.py
apps/api/src/core/infrastructure/postgres/migrations/: 001_audit_log.sql  002_data_lineage.sql  003_pii_vault.sql
apps/api/src/core/infrastructure/qdrant/: client.py  collections.py
apps/api/src/core/rag/: chunking.py  embeddings.py  ingestion.py  query_transform.py  reranker.py  retriever.py  sparse.py
apps/api/src/core/security/: rbac.py
apps/api/src/core/telemetry/: cost_tracker.py  drift_detector.py  judge_config.py  langfuse_handler.py  model_registry.py  prompt_optimizer.py  quality_pipeline.py
apps/api/src/domain/: document.py  telemetry.py
apps/api/src/domains/logicore/agents/auditor/: comparator.py
apps/api/src/domains/logicore/agents/brain/: reader.py
apps/api/src/domains/logicore/agents/guardian/: __init__.py  anomaly_detector.py  fleet_agent.py  memory_store.py
apps/api/src/domains/logicore/api/: audit.py  compliance.py  fleet.py
apps/api/src/domains/logicore/compliance/: __init__.py  audit_logger.py  audit_rbac.py  bias_detector.py  data_lineage.py  langfuse_snapshot.py  pii_vault.py  report_generator.py
apps/api/src/domains/logicore/graphs/: audit_graph.py  compliance_subgraph.py  fleet_response_graph.py
apps/api/src/domains/logicore/infrastructure/: __init__.py  fleet_agent_memory.py  fleet_memory.py
apps/api/src/domains/logicore/models/: audit.py  compliance.py  fleet.py
apps/api/src/domains/logicore/tools/: report_generator.py  sql_query.py
apps/api/src/graphs/: audit_graph.py  clearance_filter.py  compliance_subgraph.py  state.py
apps/api/src/infrastructure/llm/: __init__.py  cache.py  router.py
apps/api/src/infrastructure/postgres/: checkpointer.py
apps/api/src/infrastructure/qdrant/: client.py
apps/api/src/rag/: embeddings.py  ingestion.py  retriever.py  sparse.py
apps/api/src/security/: rbac.py
apps/api/src/telemetry/: __init__.py  cost_tracker.py  drift_detector.py  judge_config.py  langfuse_handler.py  model_registry.py  prompt_optimizer.py  quality_pipeline.py
apps/api/src/tools/: report_generator.py  sql_query.py
apps/simulator/: Cargo.toml  Dockerfile
apps/simulator/src/: config.rs  fleet.rs  main.rs  mock_data.rs  osrm.rs  routes.rs
data/: golden_set.json
docs/: BARTEK-VOICE.md  PROGRESS.md  architecture.md  linkedin-architecture-card.html  linkedin-hero-A-blueprint.html  linkedin-hero-B-series.html  linkedin-hero-C-problem-solution.html  logicore-interactive-guide.html  logicore-knowledge-base.html
scripts/: benchmark_chunking.py  benchmark_embeddings.py  benchmark_hyde.py  benchmark_local.py  benchmark_reranking.py  benchmark_reranking_v2.py  benchmark_retrieval.py  benchmark_routing.py  calibrate_judge.py  corpus_generation_prompt.md  create_fleet_agent_memory_table.sql  fleet_forwarder.py  generate_corpus.py  generate_corpus_ollama.py  generate_homogeneous_corpus.py  load_benchmark_corpus.py  run_drift_check.py  run_evaluation.py  seed_documents.py  seed_invoices.py  simulate_outage.py  telemetry_simulator.py
tests/: conftest.py
(+248 files in other folders)
