[project]
name = "logicore-api"
version = "0.1.0"
description = "LogiCore API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "qdrant-client>=1.13.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "langfuse>=2.0.0",
    "aiokafka>=0.11.0",
    "websockets>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
